Handle load variation area in margin calculation
Signed-off-by: lisrte <laurent.issertial@rte-france.com>